# GameJam-2026

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: enemy.cpp  enemy.hpp  global.cpp  main.cpp
src/attacks/: earth_attack.cpp  earth_attack1.hpp
src/attacks/air/: air_attack1.cpp  air_attack1.hpp
src/attacks/earth/: earth_attack1.cpp  earth_attack1.hpp  earth_attack2.cpp  earth_attack2.hpp
src/attacks/fire/: fire_attack1.cpp  fire_attack1.hpp  fire_attack2.cpp  fire_attack2.hpp
src/attacks/water/: water_attack1.cpp  water_attack1.hpp
src/attacks/wind/: wind_attack1.cpp  wind_attack1.hpp
src/entities/: earth_attack.hpp  enemy.cpp  enemy.hpp  merchant.cpp  merchant.hpp  player.cpp  player.hpp
src/globals/: global.cpp  global.hpp
src/utils/: tile_map.cpp  tile_map.hpp  ui.cpp  ui.hpp
